working on stuff

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Poppins:300,400,900&display=swap');
+
+
+
 .App {
+  font-family: 'Poppins';
   text-align: center;
 }
 
@@ -19,4 +24,36 @@
 
 .App-link {
   color: #09d3ac;
+}
+
+nav {
+  width: 100vw;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.mainnav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100vw;
+}
+
+.titleName {
+  text-align: start;
+}
+
+main {
+  min-height: 80vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
