--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,12 +5,18 @@
 .App {
   font-family: 'Poppins';
   text-align: center;
+  /* background-color: #09d3ac; */
+  background-color: #f7f7f7;
+  min-height: 100vh;
 }
 
 .App-logo {
   height: 40vmin;
 }
 
+a {
+  color: black;
+}
 .App-header {
   background-color: #282c34;
   min-height: 100px;
@@ -40,20 +46,74 @@ nav {
   width: 100vw;
 }
 
-.titleName {
-  text-align: start;
-}
-
 main {
   min-height: 80vh;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  flex-direction: row;
+  justify-content: space-around;
   align-items: center;
+}
+
+button {
+  color: black;
+  border-radius: 6px;
+  margin: 0px 10px;
 }
 
 .buttons {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+
+.imageCard {
+  height: 400px;
+}
+
+
+.flexcol {
+  display: flex;
+  flex-direction: column;
+  width: 15vw;
+  height: 50vh;
+  justify-content: space-around;
+  align-items: center;
+  border-right: 2px solid black;
+  justify-self: flex-start;
+  padding: 20px;
+}
+
+.half {
+  width: 75vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.halfrow {
+  width: 75vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.flexcolfull {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 80vh;
+}
+
+.submitbtn {
+  justify-self: flex-end;
+  align-self: flex-end;
+}
+
+.signup-login {
+  display: flex;
+  flex-direction: column;
 }
