--- a/client/src/App.css
+++ b/client/src/App.css
@@ -117,3 +117,10 @@ button {
   display: flex;
   flex-direction: column;
 }
+
+
+.thumb {
+  height: 75px;
+  border: 1px solid #000;
+  margin: 10px 5px 0 0;
+}
