working on buttons and stuff

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -167,3 +167,22 @@ button {
   color: black;
   margin-right: -25px;
 }
+
+.map {
+  height: 600px;
+  width: 100vw;
+  margin-top: 58px;
+}
+
+.marker {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  height: 60px;
+  width: 60px;
+  background-color: #f7f7f7;
+  color: green;
+  border: 2px solid black;
+  border-radius: 50%;
+}
