--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,12 +1,19 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:300,400,900&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700&display=swap');
 
+/* Welcome, {this.state.loggedInUser.username} */
+* {
+  font-family: 'Poppins';
+  color: #1d617a;
+}
 
-
+/* img {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+} */
 .App {
   font-family: 'Poppins';
   text-align: center;
   /* background-color: #09d3ac; */
-  background-color: #f7f7f7;
+  background-color: #dbefe1;
   min-height: 100vh;
 }
 
@@ -15,7 +22,14 @@
 }
 
 a {
-  color: black;
+  color: #1d617a;
+  font-weight: 700;
+  font-size: 18px;
+}
+
+a:hover {
+  text-decoration: none;
+  color: #1d617a;
 }
 .App-header {
   background-color: #282c34;
@@ -26,6 +40,7 @@ a {
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+
 }
 
 .App-link {
@@ -39,25 +54,57 @@ nav {
 }
 
 
+
 .mainnav {
   display: flex;
   justify-content: space-around;
   align-items: center;
   width: 100vw;
+  background-color: #1d617a;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.navbuttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  justify-self: flex-end;
+}
+
+.bold {
+  color: #dbefe1;
+  font-weight: 700;
+  font-size: 80px;
+}
+
+.sidebar {
+  width: 80vw;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 25px;
 }
 
 main {
-  min-height: 80vh;
+  min-height: 75vh;
+  width: 100vw;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-around;
   align-items: center;
 }
 
 button {
-  color: black;
+  color: #61c2a2;
+  font-weight: 500;
+  font-size: 20px;
   border-radius: 6px;
   margin: 0px 10px;
+  padding: 5px 10px;
+}
+
+button:hover {
+  color: #1d617a;
 }
 
 .buttons {
@@ -69,6 +116,11 @@ button {
 
 .imageCard {
   height: 400px;
+}
+
+.titleName {
+  text-align: left;
+  margin-bottom: 50px;
 }
 
 
@@ -152,11 +204,6 @@ button {
   color: red;
 }
 
-.star {
-  color: yellow;
-  font-size: 40px;
-}
-
 .icons {
   justify-self: flex-end;
   align-self: flex-end;
@@ -185,4 +232,8 @@ button {
   color: green;
   border: 2px solid black;
   border-radius: 50%;
+}
+.star {
+  color: yellow;
+  font-size: 40px;
 }
